--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         </div>
     </div></script>
     <script src='https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js'></script>
-    <script src='Script.js'></script>
+    <script src='script.js'></script>
 </body>
 </html>
