--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-
+    <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fvectors%2Fmath-mathematics-6683827%2F&psig=AOvVaw2Q3GGDzuLqIx8x-da-bzCb&ust=1722252172317000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKjX8cHPyYcDFQAAAAAdAAAAABAE">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
